feat(progress): animate progress status jiggle (#7545)
* feat(text-input-group): animate error status

* feat(text-input-group): make fade mixin generic

* feat(text-input-group): add pf global prefix to animation names

* feat(text-input-group): add vars, property, and keywords to patternfly-common to be consumable

* feat(progress): animate jiggle for progress bar danger state

* feat(animation): tie modifiers to a class

* chore(fade-in): use fixed animation name for fade-in

---------

Co-authored-by: Sarah Rambacher <srambach@redhat.com>
Co-authored-by: mcoker <mcoker@redhat.com>

--- a/src/patternfly/components/FormControl/form-control.scss
+++ b/src/patternfly/components/FormControl/form-control.scss
@@ -290,6 +290,14 @@
     --#{$form-control}__icon--m-status--Color: var(--#{$form-control}--m-error__icon--m-status--Color);
     --#{$form-control}--after--BorderWidth: var(--#{$form-control}--m-error--after--BorderWidth);
 
+    @media (prefers-reduced-motion: no-preference) {
+      @include pf-v6-animate-danger-jiggle;
+    }
+
+    .#{$form-control}__icon.pf-m-status {
+      @include pf-v6-fade-default(#{$form-control});
+    }
+
     > textarea {
       padding-inline-end: var(--#{$form-control}--m-error--PaddingInlineEnd, var(--#{$form-control}__textarea--m-error--PaddingInlineEnd));
     }
@@ -438,6 +446,7 @@
 
   &.pf-m-status {
     --#{$form-control}__icon--Color: var(--#{$form-control}__icon--m-status--Color);
+    
   }
 }
 
