--- a/src/patternfly/components/Table/table.scss
+++ b/src/patternfly/components/Table/table.scss
@@ -1073,7 +1073,7 @@
   }
 }
 
-.#{$table}__tr:has(+ .#{$table}__expandable-row:not(.pf-m-expanded)) {
+.#{$table}__tr:has(~ .#{$table}__expandable-row:not(.pf-m-expanded)) {
   border-block-end: 0;
 }
 
