--- a/src/patternfly/components/InputGroup/input-group-item.hbs
+++ b/src/patternfly/components/InputGroup/input-group-item.hbs
@@ -1,9 +1,14 @@
 <div class="{{pfv}}input-group__item
-  {{#if input-group-item--IsBox}} pf-m-box{{/if}}
-  {{#if input-group-item--IsPlain}} pf-m-plain{{/if}}
-  {{#if input-group-item--IsFill}} pf-m-fill{{/if}}
-  {{#if input-group-item--IsDisabled}} pf-m-disabled{{/if}}
-  {{#if input-group-item--modifier}} {{input-group-item--modifier}}{{/if}}"
+  {{setModifiers
+    input-group-item--IsBox='pf-m-box'
+    input-group-item--IsPlain='pf-m-plain'
+    input-group-item--IsFill='pf-m-fill'
+    input-group-item--IsDisabled='pf-m-disabled'
+    input-group-item--IsSearchTextInput='pf-m-search-text-input'
+    input-group-item--IsSearchClose='pf-m-search-close'
+    input-group-item--IsSearchExpand='pf-m-search-expand'
+    input-group-item--modifier=input-group-item--modifier
+  }}"
   {{#if input-group-item--attribute}}
     {{{input-group-item--attribute}}}
   {{/if}}>
