chore(search-input): add docs, update classnames

--- a/src/patternfly/components/InputGroup/input-group.hbs
+++ b/src/patternfly/components/InputGroup/input-group.hbs
@@ -1,7 +1,7 @@
 <div class="{{pfv}}input-group
   {{setModifiers
     input-group--IsPlain='pf-m-plain'
-    input-group--IsSearchInput='pf-m-search-input'
+    input-group--IsSearchInput='pf-m-search-expandable'
     input-group--IsExpanded='pf-m-expanded'
     input-group--modifier=input-group--modifier
   }}"
