fix(table): rename table cell modifier class

--- a/src/patternfly/components/Table/table-grid.scss
+++ b/src/patternfly/components/Table/table-grid.scss
@@ -266,7 +266,7 @@
     grid-template-columns: 1fr minmax(0, 1.5fr);
     align-items: start;
 
-    &.#{$table}__td-button {
+    &.pf-m-action {
       align-items: center;
     }
 
