--- a/src/patternfly/components/InputGroup/input-group.scss
+++ b/src/patternfly/components/InputGroup/input-group.scss
@@ -31,12 +31,107 @@
   // Input group text, disabled variant
   --#{$input-group}__item--m-disabled__text--Color: var(--pf-t--global--text--color--on-disabled);
   --#{$input-group}__item--m-disabled--BackgroundColor: var(--pf-t--global--background--color--disabled--default);
+
+  // Input group search expanded
+  --#{$input-group}__item--m-search-text-input--TransitionTimingFunction: var(--pf-t--global--motion--timing-function--default);
+  --#{$input-group}__item--m-search-text-input--TransitionDuration--expand--fade: var(--pf-t--global--motion--duration--fade--default);
+  --#{$input-group}__item--m-search-text-input--TransitionDuration--collapse--fade: var(--pf-t--global--motion--duration--fade--short);
+  --#{$input-group}__item--m-search-text-input--TransitionDuration--expand--slide: var(--pf-t--global--motion--duration--fade--default);
+  --#{$input-group}__item--m-search-text-input--TransitionDuration--collapse--slide: var(--pf-t--global--motion--duration--fade--short);
+  --#{$input-group}__item--m-search-text-input--TransitionDuration--fade: var(--#{$input-group}__item--m-search-text-input--TransitionDuration--collapse--fade);
+  --#{$input-group}__item--m-search-text-input--TransitionDuration--slide: var(--#{$input-group}__item--m-search-text-input--TransitionDuration--collapse--slide);
+  --#{$input-group}__item--m-search-text-input--ScaleX: 1;
+  --#{$input-group}__item--m-search-text-input--TransformOriginX--expand-start: 100%;
+  --#{$input-group}__item--m-search-text-input--TransformOriginX--expand-end: 0;
+  --#{$input-group}__item--m-search-text-input--TransformOriginX: var(--#{$input-group}__item--m-search-text-input--TransformOriginX--expand-end);
+  --#{$input-group}__item--m-search-expand--TransitionTimingFunction:var(--pf-t--global--motion--timing-function--default);
+  --#{$input-group}__item--m-search-expand--TransitionDuration--expand--fade: 0s;
+  --#{$input-group}__item--m-search-expand--TransitionDuration--collapse--fade: 0s;
+  --#{$input-group}__item--m-search-expand--TransitionDuration--fade: var(--#{$input-group}__item--m-search-expand--TransitionDuration--expand--fade);
+  --#{$input-group}__item--m-search-action--TransitionTimingFunction: var(--pf-t--global--motion--timing-function--default);
+  --#{$input-group}__item--m-search-action--TransitionDuration--expand--fade: var(--pf-t--global--motion--duration--fade--default);
+  --#{$input-group}__item--m-search-action--TransitionDuration--collapse--fade: var(--pf-t--global--motion--duration--fade--short);
+  --#{$input-group}__item--m-search-action--TransitionDuration--fade: var(--#{$input-group}__item--m-search-action--TransitionDuration--collapse--fade);
+  
+  @media (prefers-reduced-motion: no-preference) {
+    --#{$input-group}__item--m-search-text-input--ScaleX: .7;
+  }
 }
 
 .#{$input-group} {
   display: flex;
   gap: var(--#{$input-group}--Gap);
   width: 100%;
+
+  &.pf-m-search-expandable {
+    &:not(.pf-m-expanded) {
+      --#{$input-group}--Gap: 0;
+
+      transition: gap 0s var(--#{$input-group}__item--m-search-text-input--TransitionDuration--fade);
+    }
+
+    .#{$input-group}__item {
+      &.pf-m-search-input {
+        flex-grow: 1;
+        max-width: var(--#{$input-group}__item--m-search-text-input--MaxWidth, 0);
+        visibility: var(--#{$input-group}__item--m-search-text-input--Visibility, hidden);
+        opacity: var(--#{$input-group}__item--m-search-text-input--Opacity, 0);
+        transition-delay: 0s, 0s, var(--#{$input-group}__item--m-search-text-input--TransitionDuration--fade), var(--#{$input-group}__item--m-search-text-input--TransitionDuration--fade);
+        transition-timing-function: var(--#{$input-group}__item--m-search-text-input--TransitionTimingFunction);
+        transition-duration: var(--#{$input-group}__item--m-search-text-input--TransitionDuration--fade), var(--#{$input-group}__item--m-search-text-input--TransitionDuration--slide), 0s, 0s;
+        transition-property: opacity, scale, visibility, max-width;
+        transform-origin: var(--#{$input-group}__item--m-search-text-input--TransformOriginX) center;
+        scale: var(--#{$input-group}__item--m-search-text-input--ScaleX) 1;
+      }
+
+      // the expand button (magnifying glass)
+      &.pf-m-search-expand {
+        max-width: var(--#{$input-group}__item--m-search-expand--MaxWidth, 100%);
+        visibility: var(--#{$input-group}__item--m-search-expand--Visibility, visible);
+        opacity: var(--#{$input-group}__item--m-search-expand--Opacity, 1);
+        transition-delay: var(--#{$input-group}__item--m-search-action--TransitionDuration--fade);
+        transition-timing-function: var(--#{$input-group}__item--m-search-expand--TransitionTimingFunction);
+        transition-duration: var(--#{$input-group}__item--m-search-expand--TransitionDuration--fade), 0s, 0s;
+        transition-property: opacity, visibility, max-width;
+      }
+
+      // other input group items adjacent to the search input that are shown when expanded
+      &.pf-m-search-action {
+        max-width: var(--#{$input-group}__item--m-search-action--MaxWidth, 0);
+        visibility: var(--#{$input-group}__item--m-search-action--Visibility, hidden);
+        opacity: var(--#{$input-group}__item--m-search-action--Opacity, 0);
+        transition-delay: 0s, var(--#{$input-group}__item--m-search-action--TransitionDuration--fade), var(--#{$input-group}__item--m-search-action--TransitionDuration--fade);
+        transition-timing-function: var(--#{$input-group}__item--m-search-action--TransitionTimingFunction);
+        transition-duration: var(--#{$input-group}__item--m-search-action--TransitionDuration--fade), 0s, 0s;
+        transition-property: opacity, visibility, max-width;
+      }
+    }
+  
+    &.pf-m-expand-start {
+      --#{$input-group}__item--m-search-text-input--TransformOriginX: var(--#{$input-group}__item--m-search-text-input--TransformOriginX--expand-start);
+    }
+    
+    &.pf-m-expanded {
+      --#{$input-group}__item--m-search-text-input--MaxWidth: 100%;
+      --#{$input-group}__item--m-search-text-input--Visibility: visible;
+      --#{$input-group}__item--m-search-text-input--Opacity: 1;
+      --#{$input-group}__item--m-search-text-input--TransitionDuration--fade: var(--#{$input-group}__item--m-search-text-input--TransitionDuration--expand--fade);
+      --#{$input-group}__item--m-search-text-input--TransitionDuration--slide: var(--#{$input-group}__item--m-search-text-input--TransitionDuration--expand--slide);
+      --#{$input-group}__item--m-search-text-input--ScaleX: 1;
+      --#{$input-group}__item--m-search-action--MaxWidth: 100%;
+      --#{$input-group}__item--m-search-action--Visibility: visible;
+      --#{$input-group}__item--m-search-action--Opacity: 1;
+      --#{$input-group}__item--m-search-action--TransitionDuration--fade: var(--#{$input-group}__item--m-search-action--TransitionDuration--expand--fade);
+      --#{$input-group}__item--m-search-expand--MaxWidth: 0;
+      --#{$input-group}__item--m-search-expand--Visibility: hidden;
+      --#{$input-group}__item--m-search-expand--Opacity: 0;
+      --#{$input-group}__item--m-search-expand--TransitionDuration--fade: var(--#{$input-group}__item--m-search-expand--TransitionDuration--collapse--fade);
+
+      .#{$input-group}__item:is(.pf-m-search-input, .pf-m-search-expand, .pf-m-search-action) {
+        transition-delay: 0s;
+      }
+    }
+  }
 }
 
 .#{$input-group}__item {
