fix(table): correct alignment with a table cell that contains a button (#7551)

--- a/src/patternfly/components/Table/table-grid.scss
+++ b/src/patternfly/components/Table/table-grid.scss
@@ -266,6 +266,10 @@
     grid-template-columns: 1fr minmax(0, 1.5fr);
     align-items: start;
 
+    &.pf-m-action {
+      align-items: center;
+    }
+
     // set contents of td to start at column two of td grid
     > * {
       grid-column: 2;
