fix(data-list): center align the drag icon within the row

--- a/src/patternfly/components/Button/button.hbs
+++ b/src/patternfly/components/Button/button.hbs
@@ -27,6 +27,7 @@
     button--IsBlock='pf-m-block'
     button--IsSettings='pf-m-settings'
     button--IsHamburger='pf-m-hamburger'
+    button--IsDraggable='pf-v6-c-data-list__item-draggable-button'
     button--modifier=button--modifier
   }}
   {{#if button--IsDisabled}}
