--- a/src/patternfly/components/DataList/data-list-item-draggable-button.hbs
+++ b/src/patternfly/components/DataList/data-list-item-draggable-button.hbs
@@ -1,9 +1,10 @@
-<button class="{{pfv}}data-list__item-draggable-button{{#if data-list-item-draggable-button--modifier}} {{data-list-item-draggable-button--modifier}}{{/if}}"
-  type="button"
-  aria-label="Reorder"
-  aria-pressed="false"
-  {{#if data-list-item-draggable-button--attribute}}
-    {{{data-list-item-draggable-button--attribute}}}
-  {{/if}}>
-  {{> data-list-item-draggable-icon}}
-</button>
+{{> button 
+  button--IsPlain=true 
+  button--IsIcon=true 
+  button--icon='grip-vertical' 
+  button--aria-label='Reorder'
+  button--IsSmall='pf-m-small'
+  button--IsDraggable=true
+  button--attribute=data-list-item-draggable-button--attribute
+  button--IsDisabled=data-list-item-draggable-button--IsDisabled
+}}
