chore(table): updates

--- a/src/patternfly/components/Table/table-grid.scss
+++ b/src/patternfly/components/Table/table-grid.scss
@@ -183,6 +183,10 @@
     }
   }
 
+  &.pf-m-animate-expand {
+    --#{$table}__expandable-row--Display: block;
+  }
+
   // Remove border on tr inside non-expanded tbody in of expandable tables
   &.pf-m-expandable {
     --#{$table}__tr--BorderBlockEndWidth: 0; // nested table rows have no border
@@ -202,7 +206,7 @@
   // Standard table row (non-expandable)
   // exclude expandable rows
   // - Table grid tr not expandable row
-  tr:where(.#{$table}__tr):not(.#{$table}__expandable-row) {
+  tr:where(.#{$table}__tr):not(.#{$table}__expandable-row:where(:nth-child(n+2))) {
     display: grid;
     grid-template-columns: 1fr;
     height: auto;
@@ -279,7 +283,7 @@
       position: revert;
       font-weight: var(--#{$table}--cell--responsive--th--FontWeight);
       text-align: start;
-      content: attr(data-label);
+      content: var(--#{$table}--cell--responsive--label, attr(data-label));
     }
   }
 
@@ -345,7 +349,7 @@
   }
 
   // - Table grid expandable row
-  .#{$table}__expandable-row {
+  .#{$table}__expandable-row:where(:nth-child(n+2)) {
     --#{$table}--cell--responsive--PaddingBlockStart: 0;
     --#{$table}--cell--responsive--PaddingInlineEnd: 0;
     --#{$table}--cell--responsive--PaddingBlockEnd: 0;
@@ -439,7 +443,7 @@
   }
 
   // Set defaults
-  tr:where(.#{$table}__tr):not(.#{$table}__expandable-row) {
+  tr:where(.#{$table}__tr):not(.#{$table}__expandable-row:where(:nth-child(n+2))) {
     .#{$table}__toggle,
     .#{$table}__check,
     .#{$table}__favorite,
