--- a/src/patternfly/components/Table/table.scss
+++ b/src/patternfly/components/Table/table.scss
@@ -27,6 +27,8 @@
   --#{$table}__tbody--cell--PaddingBlockStart: var(--#{$table}--cell--Padding--base);
   --#{$table}__tbody--cell--PaddingBlockEnd: var(--#{$table}--cell--Padding--base);
   --#{$table}__tbody--cell--FontSize: var(--pf-t--global--font--size--body--default); // set this explicitly for input heights to calc properly
+  --#{$table}__tbody--BorderBlockEndWidth: var(--pf-t--global--border--width--divider--default);
+  --#{$table}__tbody--BorderBlockEndColor: var(--pf-t--global--border--color--default);
 
   // * Table tr
   --#{$table}__tr--BorderBlockEndWidth: var(--pf-t--global--border--width--divider--default);
@@ -331,7 +333,7 @@
 
   // Standard table row (non-expandable)
   // exclude expandable rows
-  tr:where(.#{$table}__tr):not(.#{$table}__expandable-row) {
+  tr:where(.#{$table}__tr):not(.#{$table}__expandable-row:where(:nth-child(n+2))) {
     // stylelint-disable-next-line
     &.pf-m-ghost-row {
       background-color: var(--#{$table}__tr--m-ghost-row--BackgroundColor);
@@ -569,7 +571,7 @@
       background-color: var(--#{$table}__tbody--m-selected--BackgroundColor);
       outline-offset: var(--#{$table}__tbody--m-selected--OutlineOffset);
 
-      .#{$table}__tr.pf-m-expanded:not(.#{$table}__expandable-row) {
+      .#{$table}__tr.pf-m-expanded:not(.#{$table}__expandable-row:where(:nth-child(n+2))) {
         border: none;
       }
     }
@@ -596,8 +598,8 @@
   // stylelint-disable max-nesting-depth, selector-max-class
   &.pf-m-animate-expand {
     > .#{$table}__tbody {
-      > .#{$table}__expandable-row:nth-child(n+2) {
-        display: revert;
+      > .#{$table}__expandable-row:where(:nth-child(n+2)) {
+        display: var(--#{$table}__expandable-row--Display, revert);
         visibility: hidden;
         opacity: var(--#{$table}__expandable-row--Opacity);
         transition-delay: 0s, 0s, var(--#{$table}__expandable-row--TransitionDuration--collapse--fade), var(--#{$table}__expandable-row--TransitionDuration--collapse--fade);
@@ -607,7 +609,7 @@
         translate: 0 var(--#{$table}__expandable-row--TranslateY);
 
         &[hidden] {
-          display: revert;
+          display: var(--#{$table}__expandable-row--Display, revert);
         }
 
         &.pf-m-expanded {
@@ -626,6 +628,8 @@
 
         &:not(.pf-m-expanded) {
           > :is(.#{$table}__td, .#{$table}__th) {
+            --#{$table}--cell--responsive--label: none;
+
             &,
             > .#{$table}__expandable-row-content {
               padding: 0;
@@ -641,7 +645,7 @@
         }
       }
 
-      > .#{$table}__control-row.pf-m-no-animate-expand ~ .#{$table}__expandable-row {
+      > .#{$table}__control-row.pf-m-no-animate-expand ~ .#{$table}__expandable-row:where(:nth-child(n+2)) {
         --#{$table}__expandable-row--TransitionDuration--collapse--fade: 0s;
         --#{$table}__expandable-row--TransitionDuration--collapse--slide: 0s;
         --#{$table}__expandable-row--TransitionDuration--expand--fade: 0s;
@@ -1038,7 +1042,8 @@
 }
 
 // - Table expandable row
-.#{$table}__expandable-row:nth-child(n+2) {
+// n+2 selects all children except the first because __expandable-row can go on the first row in an expandable tbody when it shouldn't. TODO - remove __expandable-body from first/control tr in breaking change.
+.#{$table}__expandable-row:where(:nth-child(n+2)) {
   position: relative;
   border-block-end: 0 solid transparent;
 
@@ -1112,7 +1117,7 @@
 
   // - Table compact table tr
   tr:where(.#{$table}__tr) {
-    &:not(.#{$table}__expandable-row) {
+    &:not(.#{$table}__expandable-row:where(:nth-child(n+2))) {
       --#{$table}--cell--PaddingBlockStart: var(--#{$table}--m-compact--cell--PaddingBlockStart);
       --#{$table}--cell--PaddingBlockEnd: var(--#{$table}--m-compact--cell--PaddingBlockEnd);
     }
@@ -1184,14 +1189,14 @@
 
   // - Table tbody
   .#{$table}__tbody {
-    border-block-end: var(--#{$table}__tr--BorderBlockEndWidth) solid var(--#{$table}__tr--BorderBlockEndColor);
+    &,
+    &.pf-m-expanded,
+    &:has(> .#{$table}__expandable-row:where(:nth-child(n+2)):not(.pf-m-expanded)) {
+      border-block-end: var(--#{$table}__tbody--BorderBlockEndWidth) solid var(--#{$table}__tbody--BorderBlockEndColor);
+    }
   }
 
-  // - Table tbody - Table tr
-  @at-root .#{$table}__tbody:has(> .#{$table}__expandable-row:not(.pf-m-expanded)),
   .#{$table}__tbody.pf-m-expanded {
-    border-block-end: var(--#{$table}__tr--BorderBlockEndWidth) solid var(--#{$table}__tr--BorderBlockEndColor);
-
     // - Table tbody table control row
     .#{$table}__control-row {
       background-color: var(--#{$table}__control-row--BackgroundColor);
